styles/_utils.scss
@import '../styles/margins';
@import '../styles/font-size';

.w-skills {
  width: 60rem !important;
}

.margin-0-auto {
  margin: 0 auto !important;
}

.margin-72-auto {
  margin: $margin-72 auto !important;
}

.margin-144-auto {
  margin: $margin-144 auto !important;
}

.mx-auto {
  margin-left: auto !important;
  margin-right: auto !important;
}

.mt-144 {
  margin-top: $margin-144 !important;
}

.mt-72 {
  margin-top: $margin-72 !important;
}

.mt-negative-dots {
  margin-top: -6rem !important;
}

.mt-32 {
  margin-top: $margin-32 !important;
}

.ml-144 {
  margin-left: $margin-144 !important;
}

.pl-144 {
  padding-left: $margin-144 !important;
}

.mb-48 {
  margin-bottom: 3rem !important;
}

.mr-72 {
  margin-right: $margin-72 !important;
}

.mr-32 {
  margin-right: $margin-32 !important;
}

.ml-16 {
  margin-left: $margin-16 !important;
}

.text-center {
  text-align: center !important;
}

.pos-absolute {
  position: absolute;
}

.container {
  display: flex;
  flex-direction: column;
  width: 1500px;
  align-items: flex-start;

  .row {
    margin-top: $margin-72;
    display: flex;
    flex-direction: row;
    width: 100%;

    .col {
      display: flex;
      width: 100%;
      height: auto;
      margin-right: $margin-72;
      flex-direction: column;
      flex: 1;
    }
  }
}

.container-title {
  width: 37.5rem;
  margin-top: 16rem;
}

.container-presentation-img {
  visibility: hidden;
  justify-content: center;
  display: flex;
  width: 100%;

  .box {
    width: 100%;
    height: 6rem;
    position: absolute;
    align-self: flex-end;
    background-color: $primary-color-light;
  }
}

.ellipse-projects-img {
  left: 0;
  margin-left: $margin-72;
}

.ellipse-group-projects-img {
  right: 0;
  margin-right: $margin-72;
  align-self: baseline;
}

.portrait-img {
  right: 0;
  margin-right: -5rem;
  max-height: 58rem;
  object-fit: contain;
}

.external-contact {
  display: flex;
  flex-direction: row;
  margin-top: $margin-32;

  a {
    margin-right: $margin-32;
    font-size: $font-size-title;
    color: $color-black;
  }
}

.centered-container {
  align-items: center;
  text-align: center;

  &.fixed-width {
    width: 30rem;
    margin-bottom: $margin-16;
  }
}

nav {
  width: 100%;
  position: fixed;
  background-color: $background-color;
  height: 5rem;
  z-index: 999;
}

.navbar {
  display: flex;
  flex-direction: row;
  position: fixed;
  background-color: $background-color;
  width: 100%;
  align-items: center;
  text-align: center;
  height: 5rem;
  padding: 1.5rem 0;
  z-index: 999;
  overflow: hidden;

  &-open {
    right: 0;
    z-index: 9999;
    display: none;
    border: none;
    position: absolute;
    right: 0;
    margin-right: 2rem;
    background: url('../src/img/menu.png') no-repeat center;
  }

  li {
    margin-right: $margin-40;
    font-size: $font-size-h6;
    overflow: hidden;
    cursor: pointer;
    height: 100%;

    a {
      color: inherit !important;
      text-decoration: none;
    }
    &:hover {
      color: $primary-color-light;
    }
  }

  .active {
    color: $primary-color;
    border-bottom: 4px solid $primary-color;
  }
}

.contact-btn-container {
  display: flex;
  flex-direction: row;
  text-align: center;
  align-items: center;

  .contact-p {
    font-size: $font-size-h2;
    color: $color-black;
    font-weight: 300;
    margin-left: 2rem;
  }
}

.btn {
  display: inline-block;
  color: $text-color-white;
  cursor: pointer;
  font-size: $font-size-h6;
  text-align: center;
  border: none;
  background-color: $primary-color;

  &.btn-circle {
    border-radius: 10rem;
    height: 6rem;
    width: 6rem;
    transition: 0.3s;

    &:hover {
      opacity: 0.8;
    }

    &-orange {
      border-radius: 10rem;
      background-color: $secondary-color;
      height: 1.75rem;
      width: 1.75rem;
      cursor: default;
    }
  }

  &.btn-round-right {
    display: flex;
    align-items: center;
    text-align: left;
    width: 50%;
    border-radius: 0rem 10rem 10rem 0rem;

    i {
      margin: 1rem;
      color: $text-color-white;
    }
  }

  &.btn-round-orange {
    border-radius: 0.5rem;
    background-color: $secondary-color;
    font-size: $font-size-h6;
    font-weight: 700;
    width: 16rem;
    height: 5rem;
    cursor: default;
  }

  &.btn-round-green {
    border-radius: 0.5rem;
    background-color: $primary-color;
    font-size: $font-size-h6;
    font-weight: 700;
    width: 16rem;
    height: 6rem;
    cursor: default;
    box-shadow: 0px 14px 28px rgba(0, 0, 0, 0.25),
      0 10px 10px rgba(0, 0, 0, 0.22);
  }

  i {
    font-size: $font-size-icons;
    color: $color-black;
  }
}

.container-projects {
  margin: $margin-144 auto 0 auto;
  display: grid;
  max-width: 120rem;
  grid-template-columns: 1fr 1fr;
  overflow: hidden;

  a {
    overflow: hidden;
  }
  .project-img {
    height: 25rem;
    border-radius: 0.5rem;
    margin: 2rem;
    cursor: pointer;
    overflow: hidden;

    &:hover {
      box-shadow: 0 14px 18px rgba(0, 0, 0, 0.25),
        0 10px 10px rgba(0, 0, 0, 0.22);
    }
  }

  .project-img:last-child {
    margin-bottom: 2rem;
  }
}

.dots-services-right {
  overflow: hidden;
  left: 0;
  width: 25.5rem;
  margin-left: -12.75rem;
}

.dots-services-left {
  overflow: hidden;
  right: 0;
  width: 25.5rem;
  margin-right: -12.75rem;
}

.container-skills {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

.container-languages {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 1rem;

  .language {
    display: flex;
    flex-direction: row;
    align-items: center;
  }
}

.skills-img {
  right: 0;
  margin-right: $margin-144;
  margin-top: -$margin-72;
}

.overflow-visible {
  overflow: visible;
}

.w-75 {
  width: 75% !important;
}

.hidden-img {
  visibility: hidden !important;
}

